Fixed css for spacing and sizing for fridge items

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,6 +5,11 @@ body {
     flex-direction: column;
     min-height: 100vh;
   }
+
+  h1 {
+    text-align: center;
+    margin-bottom: 2rem;
+  }
   
   .navbar {
     background-color: #f8f9fa;
@@ -141,9 +146,17 @@ body {
   /* Fridge CSS */
 .fridge-item {
   border: 1px solid #ccc;
+  width: 30%;
   padding: 10px;
   margin-bottom: 10px;
   cursor: pointer;
+}
+
+/* CHANGE ME TO FIX FORMATING OF FRIDGE ITEMS */
+#fridge-items-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* General modal styles (affect all modals) */
